--- a/.gitignore
+++ b/.gitignore
@@ -171,7 +171,7 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
+app/
 downloads/
 eggs/
 .eggs/
@@ -318,7 +318,7 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
+app/
 downloads/
 eggs/
 .eggs/
